syntax = "proto3";

package go.micro.service.user;

service User {
    // 注册
    rpc Register(RegisterRequest) returns (RegisterResponse){}
    // 登录
    rpc Login(LoginRequest) returns (LoginResponse){}
    // 查询用户信息
    rpc GetUserInfo(UserInfoRequest) returns (UserInfoResponse){}

}

message UserInfoRequest {
    string user_name = 1;
}

message UserInfoResponse {
    int64 user_id = 1;
    string user_name = 2;
    string first_name = 3;
}

message LoginRequest{
    string user_name = 1;
    string pwd = 2;


}

message LoginResponse{
    bool is_success = 1;
}

message RegisterRequest{
    string user_name = 1;
    string first_name = 2;
    string pwd = 3;
}

message RegisterResponse{
    string message = 1;
}